2000-09-06  Peter Eisentraut  <peter_e@gmx.net>

	* autoconf.texi: English and typo fixes.

2000-09-05  Pavel Roskin  <proski@gnu.org>

	* autoconf.sh: Consider undefined macros as errors.
	* tests/base.m4 (unexpanded macros): Expect error, not warning

2000-09-05   Dave Love  <fx@gnu.org>

	* aclang.m4 (_AC_PROG_F77_GNU): Run command from standard input so
	that we can get some standard output.

2000-09-04  Peter Eisentraut  <peter_e@gmx.net>

	* autoscan.pl: Repair broken Getopt::Long use.

2000-09-04  Akim Demaille  <akim@epita.fr>

	* configure.in: Bump version to 2.49b.
	* Makefile.am (bin_SCRIPTS): Depend upon configure.in.

2000-08-11  Akim Demaille  <akim@epita.fr>

	Version 2.49a.

2000-08-11  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_NO_EXECUTABLES): New macro.

2000-08-11  Akim Demaille  <akim@epita.fr>

	* tests/base.m4 (AC_SHELL_MKDIR_P): Remove `a' too.

2000-08-11  Akim Demaille  <akim@epita.fr>

	* configure.in: Bump version to 2.49a.

2000-08-11  J. David Anglin  <dave@hiauly1.hia.nrc.ca>

	* autoconf.sh: Change `exit N' to `(exit N); exit' to provide
	the correct exit status when an exit trap is taken.

2000-08-11  Akim Demaille  <akim@epita.fr>

	* acfunctions.m4 (AM_FUNC_ERROR_AT_LINE, AM_FUNC_FNMATCH,
	AM_FUNC_MKTIME, AM_FUNC_OBSTACK, AM_FUNC_STRTOD): Deactivate
	their AU_ALIAS definition: Automake 1.4 does not quote the name of
	these macros, hence when Autoconf reads Automake's definition the
	name is expanded with unpredictable results.

2000-08-09  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh (Installing Autoconf extensions files): Remove.

2000-08-09  Akim Demaille  <akim@epita.fr>

	* autoconf.sh (finalize.awk): Don't leave spaces before the user
	function calls.
	Reported by John David Anglin.
	* doc/autoconf.texi (Limitations of Usual Tools): Start the AWK
	section.
	* tests/tools.m4 (AWK portability): New test.

2000-08-08  Pavel Roskin  <proski@gnu.org>

	* Makefile.am: substitute @bindir@ in shell scripts, needed by